bk_ida/gccida/g1/get_file_function_name_long
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5109:7: error: use of undeclared identifier 'value_2'
if ( !value_2 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5115:1: error: use of undeclared identifier 'value_2'
value_2 = v14; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5118:7: error: use of undeclared identifier 'value_2'
v11 = value_2; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5119:7: error: use of undeclared identifier 'value_2'
v12 = value_2 / 0x3EuLL; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5120:18: error: use of undeclared identifier 'value_2'
*v10 = letters_1[value_2 % 0x3EuLL]; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5120:8: error: use of undeclared identifier 'letters_1'
*v10 = letters_1[value_2 % 0x3EuLL]; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5121:10: error: use of undeclared identifier 'letters_1'
v10[1] = letters_1[v12 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5123:10: error: use of undeclared identifier 'letters_1'
v10[2] = letters_1[( ( unsigned __int64)( ( 0x8421084210842109LL * ( unsigned __int128)( v11 / 0x7C)) >> 64) >> 4) 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5128:10: error: use of undeclared identifier 'letters_1'
v10[3] = letters_1[( ( unsigned __int64)( ( 0x8421084210842109LL 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5135:10: error: use of undeclared identifier 'letters_1'
v10[4] = letters_1[( ( unsigned __int64)( ( 0x8421084210842109LL 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/tree.c:5142:43: error: use of undeclared identifier 'letters_1'
*( _WORD *)( v10 + 5) = ( unsigned __int8)letters_1[( ( unsigned __int64)( ( 0x8421084210842109LL 
                                          ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_file_function_name_long/src/obj/tree.o] Error 1
